syntax = "proto3";

package golem.apidefinition;

import "golem/common/empty.proto";
import "golem/apidefinition/api_definition_error.proto";
import "golem/apidefinition/api_definition.proto";

service ApiDefinitionService {
  rpc CreateOrUpdateApiDefinition (CreateOrUpdateApiDefinitionRequest) returns (CreateOrUpdateApiDefinitionResponse) {}
  rpc GetApiDefinition (GetApiDefinitionRequest) returns (GetApiDefinitionResponse) {}
  rpc GetApiDefinitionVersions (GetApiDefinitionVersionsRequest) returns (GetApiDefinitionVersionsResponse) {}
  rpc GetAllApiDefinitions (GetAllApiDefinitionsRequest) returns (GetAllApiDefinitionsResponse) {}
  rpc DeleteApiDefinition (DeleteApiDefinitionRequest) returns (DeleteApiDefinitionResponse) {}
}


message CreateOrUpdateApiDefinitionRequest {
  oneof api_definition {
    ApiDefinition definition = 1;
    string openapi = 2;
  }
}


message CreateOrUpdateApiDefinitionResponse {
  oneof result {
    ApiDefinition success = 1;
    ApiDefinitionError error = 2;
  }
}

message GetApiDefinitionRequest {
  ApiDefinitionId api_definition_id = 1;
  string version = 2;
}

message GetApiDefinitionResponse {
  oneof result {
    ApiDefinition success = 1;
    ApiDefinitionError error = 2;
  }
}

message GetApiDefinitionVersionsRequest {
  ApiDefinitionId api_definition_id = 1;
}

message GetApiDefinitionVersionsResponse {
  oneof result {
    ApiDefinitionList success = 1;
    ApiDefinitionError error = 2;
  }
}

message DeleteApiDefinitionRequest {
  ApiDefinitionId api_definition_id = 1;
  string version = 2;
}

message DeleteApiDefinitionResponse {
  oneof result {
    golem.common.Empty success = 1;
    ApiDefinitionError error = 2;
  }
}

message GetAllApiDefinitionsRequest {}

message GetAllApiDefinitionsResponse {
  oneof result {
    ApiDefinitionList success = 1;
    ApiDefinitionError error = 2;
  }
}

